fix white flicker

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+body{
+  background: black;
+}
+
+
 /*************** NAVIGATION ***************/
 nav ul{
   list-style: none;
